--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     "minimum-stability": "beta",
     "require": {
         "php": "^7.1",
-        "symfony/form": "~3.4@beta",
-        "symfony/dependency-injection": "~3.4@beta",
+        "symfony/form": "^3.4 || ^4.0",
+        "symfony/dependency-injection": "^3.4 || ^4.0",
         "doctrine/orm": "^2.5",
-        "symfony/http-foundation": "^3.4",
-        "symfony/http-kernel": "^3.4"
+        "symfony/http-foundation": "^3.4 || ^4.0",
+        "symfony/http-kernel": "^3.4 || ^4.0"
     },
     "autoload": {
         "psr-4": {
