--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
     </php>
 
     <testsuites>
-        <testsuite name="Ruvents GetLogo Test Suite">
+        <testsuite name="Ruwork GetLogo Test Suite">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
