--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ruwork/filter-bundle",
+    "name": "ruwork/doctrine-filter-bundle",
     "description": "Ruwork Filter Bundle",
     "type": "symfony-bundle",
     "license": "MIT",
