--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "autoload": {
         "psr-4": {
             "Ruwork\\DoctrineFilterBundle\\": ""
-        }
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
